# A-Maze-ing

./: .gitignore  Makefile  README.md  a-maze-ing.py  config.txt  config_parser.py  maze.txt  nota.txt  notas.txt  requirements.txt
maze_app/: maze.py  themes.py
maze_app/generator/: MazeGenerator.py  README.md  __init__.py  pyproject.toml
maze_app/output/: file_maze.py
maze_app/render/: render.py
parse/: config_model.py  config_parser.py
