[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generation algorithms"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "David Mena Linuesa" },
	{ name = "Roger Marín Navarro" }
]

[tool.setuptools]
package-dir = {"" = "."}
py-modules = ["MazeGenerator"]
